# PwZN

Lab4/Zadanie4/: pyproject.toml
Lab4/Zadanie4/scripts/: Zadanie4.py
Zadanie1/: pyproject.toml
Zadanie1/Data/: RiJ_ang.txt  RiJ_pol.txt  źródło.txt
Zadanie1/script/: PWZN_PB_Z1.py  testFile.txt  testFile2.txt
Zadanie10/: pyproject.toml
Zadanie10/scripts/: Zadanie10.py
Zadanie2/: mag.txt  pyproject.toml  test_m.txt
Zadanie2/script/: Zadanie2.py
Zadanie3/: pyproject.toml
Zadanie3/script/: Zadanie3.py
Zadanie4/: times.txt
Zadanie5/: pyproject.toml  testFile.json
Zadanie5/scripts/: Zadanie5.py
Zadanie6/: pyproject.toml  test.json
Zadanie6/script/: Zadanie6.py
Zadanie7/: pyproject.toml
Zadanie8/: pyproject.toml
Zadanie8/scripts/: Zadanie8.ipynb
Zadanie9/: pyproject.toml
Zadanie9/scripts/: Zadanie9.py
