[tool.poetry]
name = "pwzn-pb-z8"
version = "0.1.0"
description = "Python w zastosowaniach naukowych - Zadanie 8"
authors = ["Piotr Bienias"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.3"
sympy = "^1.12"
matplotlib = "^3.8.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
