[tool.poetry]
name = "pwzn-pb-z9"
version = "0.1.0"
description = "Python w zastosowaniach naukowych - Zadanie 9"
authors = ["Piotr Bienias"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.12.0"
bokeh = "^3.3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
